fixed alignment of resources triangle and fonts

--- a/css/wwc-stylee.css
+++ b/css/wwc-stylee.css
@@ -323,7 +323,7 @@ footer li a{
 	position:absolute; 
 	content:""; 
 	z-index:100;
-	left:20%;
+	left:250px;
 	width:0px; 
 	height:0px; 
 	border-left:30px solid transparent;
@@ -339,6 +339,7 @@ footer li a{
 	text-align:left;
 	margin-bottom:1em;
 }
+li.li-ec{margin-top:60px;}
 .embedded-content-list{
 	margin-left:250px;
 	text-align:left;
@@ -960,7 +961,7 @@ section h2{
 		font-size:10px;
 	}
 	.blogposts-box h2 a{line-height:80px;}
-
+	li.li-ec{margin-top:0}
 
 
 }
